@@ -344,6 +344,9 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 5530) Consistency between character encoding in {{PAGENAMEE}},
   {{SUBPAGENAMEE}} and {{FULLPAGENAMEE}}
 * API siteinfo query no longer throws an exception for empty sifilter parameter.
+* Safer handling of non-MediaWiki exceptions -- now obeys our settings for
+  formatting and path exposure.
+
 
 === API changes in 1.14 ===
 
